k8s/prd/cert-manager-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    app: cert-manager
    env: prd
