k8s/prd/service-traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80

    - protocol: TCP
      port: 443
      name: web
      targetPort: 443
