k8s/prd/traefik-admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-web-service
  namespace: kube-system
spec:
  type: ClusterIP
  selector:
    app: traefik-ingress-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
