k8s/prd/traefik-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-web-ui-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik-ui.carrinhodigital.co
      http:
        paths:
          - path: /
            backend:
              serviceName: traefik-web-service
              servicePort: 80
  tls:
    - secretName: traefik-ui-tls-cert
